# repkl

./: CONTRIBUTING.txt  Dockerfile  LICENSE.txt  README.md  setup.cfg
.github/workflows/: main.yml
docker/centos/: Dockerfile
src/main/python/repkl/: algorithm.py  assetmap.py  cli.py  cpl.py  model.py  pkl.py  utils.py
src/test/python/: test_assetmap.py  test_cli.py  test_cpl.py  test_pkl.py
src/test/resources/imp/countdown/: ASSETMAP.xml  CPL_bb2ce11c-1bb6-4781-8e69-967183d02b9b.xml  PKL_c8f6716b-0dfa-4062-8569-98fc77637287.xml
src/test/resources/imp/countdown-audio/: ASSETMAP.xml  CPL_0b976350-bea1-4e62-ba07-f32b28aaaf30.xml  PKL_e8aa8652-f9de-4d8d-b337-53123066605e.xml  WAV_d01bc6be-ae2f-436b-9705-c402e1d92212.mxf  countdown-small.mxf
