[metadata]
name = repkl
version = 1.0.0-beta.1
description = Repackages an IMF Composition
license = BSD 2-Clause License

[options]
packages = find:
package_dir =
  repkl = src/main/python/repkl
python_requires = >=3.8, <4

[options.packages.find]
where = src/main/python

[options.entry_points]
console_scripts =
  replk = repkl.cli:main