[metadata]
name = repkl
version = 1.0.0-beta.2
description = Repackages an IMF Composition
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 2-Clause License
author = Pierre-Anthony Lemieux
author_email = pal@sandflow.com
url = https://github.com/sandflow/repkl

[options]
packages = find:
package_dir =
  repkl = src/main/python/repkl
python_requires = >=3.8, <4

[options.packages.find]
where = src/main/python

[options.entry_points]
console_scripts =
  repkl = repkl.cli:main